can-socket/tests/compile-fail/can_id_negative3.rs
fn main() {
	let _id = can_socket::id!(extended: -2);
}
